--- a/styles/main.css
+++ b/styles/main.css
@@ -424,8 +424,8 @@ body {
 
 #sworks .item:hover img {
   filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
-  filter: brightness(0.6);
-  -webkit-filter: brightness(0.6);
+  filter: brightness(0.3);
+  -webkit-filter: brightness(0.3);
 }
 
 #sworks .item h2 {
@@ -657,6 +657,8 @@ body {
   background-color: rgba(241, 240, 239, 0.5);
   position: relative;
   text-align: left;
+  height: 493px;
+  overflow-y: scroll;
 }
 
 .icontent .iside h1 {
