--- a/styles/main.scss
+++ b/styles/main.scss
@@ -340,8 +340,8 @@ body {
 
     .item:hover img {
         filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
-        filter: brightness(0.6);
-        -webkit-filter: brightness(0.6);
+        filter: brightness(0.3);
+        -webkit-filter: brightness(0.3);
     }
 
     .item h2 {
@@ -551,6 +551,8 @@ body {
         background-color: $nav-light;
         position: relative;
         text-align: left;
+        height: 493px;
+        overflow-y: scroll;
 
         h1 {
             font-family: 'Raleway', sans-serif;
